--- a/code/assessment2.html
+++ b/code/assessment2.html
@@ -10,22 +10,21 @@
     </head>
     <body>
        <div class="topnav">
-                    <a class="actve" href="assessment2.html">Home</a>
-                    <a href="aboutme.html">About</a>
-                    <a href="contactme.html">Contact</a>
-                    <a href="">Blog</a>
+          <a class="actve" href="assessment2.html">Home</a>
+          <a href="aboutme.html">About</a>
+          <a href="blog.html">Blog</a>
+          <a href="contactme.html">Contact</a>
         </div>
         <div>
-            <!-- <section> -->
-                <img id="basketball" src="basketball.jpg" /> 
-            <!-- </section> -->
+          <section>
+            <img id="basketball" src="basketball.jpg" /> 
+          </section>
         </div>
-           
         <div class="flexbox">
             <div class="homepage">
                 <section class="sectionheading">
                     <h1 class="font">Welcome!</h1>
-                      <p class="font2">My name is Robbie, and you are most welcome here on my website. I hope you enjoy exploring the website and finding out more about me. </p>
+                    <p class="font2">My name is Robbie, and you are most welcome here on my website. I hope you enjoy exploring the website and finding out more about me. </p>
                 </section>
                 <section class="sectionheading">
                   <h2 class="font"> What I'm Doing at the Moment</h2>
@@ -43,16 +42,15 @@
             </div>
         </div>
         <div>
-            <section>
-                <footer>
-                    <a id="footer" href="#top">Back to Top</a>
-                    <p> Posted by: Robbie Colborne</p>
-                    &copy; Copyright Robbie Colborne.
-                </footer>
-            </section>
+          <section>
+            <footer>
+              <a id="footer" href="#top">Back to Top</a>
+              <p> Posted by: Robbie Colborne</p>
+              &copy; Copyright Robbie Colborne.
+            </footer>
+          </section>
         </div>
-        </div>
-        </div>
+    </div>
     </body>
   </html>
   
