--- a/code/aboutme.html
+++ b/code/aboutme.html
@@ -4,7 +4,8 @@
       <link rel="stylesheet" href="aboutme.css">
       <title>Robbie Colborne</title>
       <a name="top"></a>
-      <style>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <style> 
       @import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Squada+One&display=swap');
       </style>
     </head>
@@ -20,7 +21,9 @@
         <p class="font2">I was educated from pre-school to year 12 at the International Grammar School. I enjoyed my time at school although I found it difficult to always apply myself completely to my studies. Following school, I decided to pursue a Bachelor of Arts degree at Macquarie University. I enjoyed my time and majored in Philosophy, Politics and International Relations. After my time at university, I ended up in television/film production. For the past few years, I have worked in the Art Department on a variety of different shows. However, I felt like it was time for a change. That’s why I enrolled in the CoderAcademy Fast Track Program. While it’s very challenging I’m enjoying it heaps!  </p>
       </div>
       <div>
-        <img src="videocamera.jpg">
+        <section class="image">
+          <img src="videocamera1.jpg">
+        </section>
       </div>
       <div>
         <h2 class="font">Interests and Hobbies</h2>
