--- a/code/contactme.html
+++ b/code/contactme.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link rel="stylesheet" href="index.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="contactme.css">
       <title>Robbie Colborne</title>
       <a name="top"></a>
       <style>
@@ -16,18 +17,18 @@
         <a href="contactme.html">Contact</a>
       </div>
       <div> 
-        <section>
-          <img src="weddingphoto1.png">
+        <section id="rob">
+          <img class="images" src="contactrob.png">
         </section>
       </div>
       <div>
         <section>
           <h1 class="font"> Contact Me</h1>
-          <ul>
-            <li> Facebook</li>
-            <li> Email </li>
+          <ul >
+            <li> Facebook search Robbie Colborne</li>
+            <li> Email robbie_c1000@hotmail.com </li>
             <li> Instagram</li>
-            <li> Phone</li>
+            <li> Phone 0449717863</li>
           </ul>
         </section>
       </div>
