--- a/code/blog.html
+++ b/code/blog.html
@@ -16,7 +16,12 @@
           <a href="blog.html">Blog</a>
           <a href="contactme.html">Contact</a>
        </div>
-        <div>
+       <div>
+         <section> 
+           <h1 id="blog">Blog Space</h1>
+         </section>
+       </div> 
+       <div>
           <section>
           <img class="image" src="hamishandi.JPG">
           </section>
