--- a/code/contactme.html
+++ b/code/contactme.html
@@ -16,9 +16,14 @@
         <a href="blog.html">Blog</a>
         <a href="contactme.html">Contact</a>
       </div>
+      <div>
+        <section>
+          <h1 id="getintouch">Get in Touch</h1>
+        </section>
+      </div>
       <div> 
         <section id="rob">
-          <img class="images" src="contactrob.png">
+          <img class="images" src="contactor.png">
         </section>
       </div>
       <div>
@@ -34,8 +39,8 @@
       </div>
       <div>
         <section>
-          <footer>
-            <a id="footer" href="#top">Back to Top</a>
+          <footer class="footer">
+            <a href="#top">Back to Top</a>
             <p> Posted by: Robbie Colborne</p>
             &copy; Copyright Robbie Colborne.
           </footer>
