--- a/code/assessment2.html
+++ b/code/assessment2.html
@@ -31,7 +31,12 @@
             <div class="homepage">
                 <section class="sectionheading">
                     <h1 class="font">Welcome!</h1>
+                <section> 
                     <p class="font2">My name is Robbie, and you are most welcome here on my website. I hope you enjoy exploring the website and finding out more about me. </p>
+                </section>
+                <section class="hide-small">
+                    <h2 class="font">What I'm Doing at the Moment</h2>
+                    <p class="font2">Currently, i'm a full time student at the CoderAcademy Sydney. This means full on study 9 to 5 (also at night and weekends). Hopefully with my own skills, the support of fellow students, and the help of my educators i can become a professional coder!</p>
                 </section>
             </div>
             <div class="homepage">
@@ -40,7 +45,7 @@
                 </section>
             </div>
         </div>
-        <section class="sectionheadinglastp">
+          <section class="hide-large" class="sectionheadinglastp">
           <h2 class="font"> What I'm Doing at the Moment</h2>
           <p class="font2">Currently, i'm a full time student at the CoderAcademy Sydney. This means full on study 9 to 5 (also at night and weekends). Hopefully with my own skills, the support of fellow students, and the help of my educators i can become a professional coder!</p>
         </section>
