--- a/code/aboutme.html
+++ b/code/aboutme.html
@@ -26,7 +26,8 @@
           <img id="topimage" src="education.jpg">
         </section>
       </div>
-      <div>
+  <div class="flextime">
+      <div class="flexchange">
         <h1 id="rob" class="font">My Educational and Professional History</h1>
         <p class="font2">I was educated from pre-school to year 12 at the International Grammar School. I enjoyed my time at school although I found it difficult to always apply myself completely to my studies. Following school, I decided to pursue a Bachelor of Arts degree at Macquarie University. I enjoyed my time and majored in Philosophy, Politics and International Relations. After my time at university, I ended up in television/film production. For the past few years, I have worked in the Art Department on a variety of different shows. However, I felt like it was time for a change. That’s why I enrolled in the CoderAcademy Fast Track Program. While it’s very challenging I’m enjoying it heaps!  </p>
       </div>
@@ -34,7 +35,8 @@
         <section class="image">
           <img id="resize" src="videocamera1.jpg">
         </section>
-      </div>
+    </div>
+  </div>
       <div>
         <h2 class="font">Interests and Hobbies</h2>
         <p class="font2"> Since my youth, I have enjoyed sports. I never really minded which ones. I spent a lot of time playing both cricket and basketball. As I grow older, I developed an interest in coin collecting, which is relatively unique for someone my age. I guess it was a reflection of a great deal of free time! I love to spend time with my family and friends and consider these relationships my most valued possession. </p>
