--- a/code/assessment2.html
+++ b/code/assessment2.html
@@ -16,22 +16,33 @@
           <a href="aboutme.html">About</a>
           <a href="blog.html">Blog</a>
           <a href="contactme.html">Contact</a>
+          <a href="robbiecolborne.html">Title</a>
         </div>
         <div>
           <section>
             <h1 id="welcomeheading">Welcome One and All</h1>
           </section>
         </div>
+      <div class="bigflex">
         <div id="codephoto">
+          <section class="hidden1">
+              <h1 class="font">Welcome!</h1>
+              <p class="font2">My name is Robbie, and you are most welcome here on my website. I hope you enjoy exploring the website and finding out more about me.</p>
+          </section>
+        </div>
+        <div>
           <section>
               <img id="basketball" src="titlepage1.jpg" /> 
           </section>
         </div>
+      </div>
+
         <div class="flexbox">
             <div class="homepage">
-                <section class="sectionheading">
+                <section class="sectionheading, hidden">
                     <h1 class="font">Welcome!</h1>
-                <section> 
+                </section>
+                <section class="hidden"> 
                     <p class="font2">My name is Robbie, and you are most welcome here on my website. I hope you enjoy exploring the website and finding out more about me. </p>
                 </section>
                 <section class="hide-small">
