fixed the syntax

--- a/code/robbiecolborne.html
+++ b/code/robbiecolborne.html
@@ -19,7 +19,7 @@
               <div>
                 <section>
                     <p class="texting"> HOME </p>
-                    <a href="assessment2.html" target="assessment2.html">
+                    <a href="index.html" target="index.html">
                     <img src="4home.jpg"/>
                     </a>
               </div>
@@ -37,7 +37,7 @@
                       <a href="blog.html" target="blog.html">
                       <img src="2blog.jpg"/>
                       </a>
-                  </section>
+                  </section><img id="basketball" src="titlepage1.jpg" /> 
               </div>
               <div>
                 <section>
