--- a/code/aboutme.html
+++ b/code/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link rel="stylesheet" href="aboutme.css">
+      <link rel="stylesheet" href="css/aboutme.css">
       <title>Robbie Colborne</title>
       <a name="top"></a>
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,7 +24,7 @@
       </div>
       <div>
         <section id="edueducation">
-          <img id="topimage" src="education.jpg">
+          <img id="topimage" src="images/education.jpg">
         </section>
       </div>
   <div class="flextime">
@@ -34,7 +34,7 @@
       </div>
       <div>
         <section class="image">
-          <img id="resize" src="videocamera1.jpg">
+          <img id="resize" src="images/videocamera1.jpg">
         </section>
     </div>
   </div>
