--- a/code/blog.html
+++ b/code/blog.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="blog.css">
+      <link rel="stylesheet" href="css/blog.css">
       <title>Robbie Colborne</title>
       <a name="top"></a>
       <style>
@@ -25,7 +25,7 @@
        <div class="flexdiv1">
          <div class="flexdiv2">
           <section>
-          <img class="image" src="hamishandi.JPG">
+          <img class="image" src="images/hamishandi.JPG">
           </section>
           </div>
           <div class="step1">
@@ -38,7 +38,7 @@
        <div class="flexdiv3">
          <div class="flexdiv2">
           <section>
-            <img class="image" src="harryrobcomputer.png">
+            <img class="image" src="images/harryrobcomputer.png">
           </section>
         </div>
           <div class="step1">
@@ -51,7 +51,7 @@
       <div class="flexdiv1">
         <div class="flexdiv2">
         <section>
-          <img class="image" src="teachingharry.png">
+          <img class="image" src="images/teachingharry.png">
         </section>
         </div>
         <div class="step1">
@@ -64,7 +64,7 @@
       <div class="flexdiv3">
         <div class="flexdiv2">
         <section>
-            <img class="image" src="microwave.JPG">
+            <img class="image" src="images/microwave.JPG">
         </section>
         </div>
         <div class="step1">
@@ -77,7 +77,7 @@
       <div class="flexdiv1">
         <div class="flexdiv2">
           <section>
-            <img class="image" src="lecture.png">
+            <img class="image" src="images/lecture.png">
           </section>
         </div>
         <div class="step1">
