--- a/code/contactme.html
+++ b/code/contactme.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="contactme.css">
+      <link rel="stylesheet" href="css/contactme.css">
       <title>Robbie Colborne</title>
       <a name="top"></a>
       <style>
@@ -24,7 +24,7 @@
       </div>
       <div> 
         <section id="rob">
-          <img class="images" src="contactor.png">
+          <img class="images" src="images/contactor.png">
         </section>
       </div>
       <div>
