--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="index.css">
+      <link rel="stylesheet" href="css/index.css">
       <title>Robbie Colborne</title>
       <a name="top"></a>
       <style>
@@ -32,7 +32,7 @@
         </div>
         <div>
           <section>
-              <img id="basketball" src="titlepage1.jpg" /> 
+              <img id="basketball" src="images/titlepage1.jpg" /> 
           </section>
         </div>
       </div>
@@ -52,7 +52,7 @@
             </div>
             <div class="homepage">
                 <section>
-                    <img id="wedding" src="titlepage2.jpg">
+                    <img id="wedding" src="images/titlepage2.jpg">
                 </section>
             </div>
         </div>
