--- a/code/robbiecolborne.html
+++ b/code/robbiecolborne.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
       <head>
-        <link rel="stylesheet" href="robbiecolborne.css">
+        <link rel="stylesheet" href="css/robbiecolborne.css">
         <title>Robbie Colborne</title>
         <a name="top"></a>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,14 +20,14 @@
                 <section>
                     <p class="texting"> HOME </p>
                     <a href="index.html" target="index.html">
-                    <img src="4home.jpg"/>
+                    <img src="images/4home.jpg"/>
                     </a>
               </div>
               <div>
                 <section>
                     <p class="texting">ABOUT ME</p>
                     <a href="aboutme.html" target="aboutme.html">
-                    <img src="1aboutme.jpg"/>
+                    <img src="images/1aboutme.jpg"/>
                     </a>
                 </section>
               </div>
@@ -35,15 +35,15 @@
                   <section>
                       <p class="texting">BLOG</p>
                       <a href="blog.html" target="blog.html">
-                      <img src="2blog.jpg"/>
+                      <img src="images/2blog.jpg"/>
                       </a>
-                  </section><img id="basketball" src="titlepage1.jpg" /> 
+                  </section> 
               </div>
               <div>
                 <section>
                     <p class="texting">CONTACT ME</p>
                     <a href="contactme.html" target="contactme.html">
-                        <img src="3contact.jpg"/>
+                        <img src="images/3contact.jpg"/>
                         </a>
                 </section>
               </div> 
