--- a/code/blog.html
+++ b/code/blog.html
@@ -11,11 +11,11 @@
     </head>
     <body>
        <div class="topnav">
-          <a class="actve" href="index.html">Home</a>
+          <a class="actve" href="robbiecolborne.html">Home</a>
           <a href="aboutme.html">About</a>
           <a href="blog.html">Blog</a>
           <a href="contactme.html">Contact</a>
-          <a href="robbiecolborne.html">Title</a>
+          <a href="index.html">Title</a>
        </div>
        <div>
          <section> 
