--- a/code/contactme.html
+++ b/code/contactme.html
@@ -1,6 +1,7 @@
+
 <!DOCTYPE html>
   <html>
-    <head>
+    <head> 
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="css/contactme.css">
       <title>Robbie Colborne</title>
@@ -11,41 +12,51 @@
     </head>
     <body>
       <div class="topnav">
-        <a class="actve" href="index.html">Home</a>
+        <a class="actve" href="robbiecolborne.html">Home</a>
         <a href="aboutme.html">About</a>
         <a href="blog.html">Blog</a>
         <a href="contactme.html">Contact</a>
-        <a href="robbiecolborne.html">Title</a>
+        <a href="index.html">Title</a>
       </div>
       <div>
         <section>
           <h1 id="getintouch">Get in Touch</h1>
         </section>
       </div>
-      <div> 
-        <section id="rob">
-          <img class="images" src="images/contactor.png">
-        </section>
+      <div class="break">
+        <div>
+            <section >
+            <p class="texter">FACEBOOK</p>
+           <a href= https://www.facebook.com/robbie.colborne> <img class="border" src="images/facebook.jpg"> </a>
+            </section>
+        </div>
+        <div>
+          <section>
+            <p class="texter">GITHUB</p>
+            <a href= https://github.com/robbie10001> <img class="border" src="images/github.png"></a>
+          </section>
+        </div>
+        <div>
+          <section class="relative">
+            <p class="texter">PHONE</p>
+            <img class="border" src="images/phone.jpg">
+            <div class="phone">
+              0449717863
+            </div>
+          </section>
+        </div>
+        <div>
+          <section>
+            <p class="texter">EMAIL</p>
+            <a href= "mailto:robbie_c1000@hotmail.com"> <img class="border" src="images/email.jpg"> </a>
+          </section>
+        </div>
       </div>
       <div>
-        <section>
-          <h1 class="font"> Contact Me</h1>
-          <ul >
-            <li> Facebook search Robbie Colborne</li>
-            <li> Email robbie_c1000@hotmail.com </li>
-            <li> Instagram</li>
-            <li> Phone 0449717863</li>
-          </ul>
-        </section>
-      </div>
-      <div>
-        <section>
           <footer class="footer">
-            <a href="#top">Back to Top</a>
-            <p> Posted by: Robbie Colborne</p>
-            &copy; Copyright Robbie Colborne.
+              <a href="#top">Back to Top</a>
+              <p> Posted by: Robbie Colborne</p>
+              &copy; Copyright Robbie Colborne.
           </footer>
-        </section>
       </div>
-    </body>
-</html>
+    </html>
