--- a/code/aboutme.html
+++ b/code/aboutme.html
@@ -11,7 +11,7 @@
     </head>
     <body>
       <div class="topnav">
-          <a class="actve" href="index.html">Home</a>
+          <a class="actve" href="robbiecolborne.html">Home</a>
           <a href="aboutme.html">About</a>
           <a href="blog.html">Blog</a>
           <a href="contactme.html">Contact</a>
