--- a/code/index.html
+++ b/code/index.html
@@ -1,76 +1,64 @@
 <!DOCTYPE html>
   <html>
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="css/index.css">
-      <title>Robbie Colborne</title>
-      <a name="top"></a>
-      <style>
-     @import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Squada+One&display=swap');
-      </style>
-    </head>
-    <body>
-       <div class="topnav">
-          <a class="actve" href="index.html">Home</a>
-          <a href="aboutme.html">About</a>
-          <a href="blog.html">Blog</a>
-          <a href="contactme.html">Contact</a>
-          <a href="robbiecolborne.html">Title</a>
-        </div>
+      <head>
+        <link rel="stylesheet" href="css/index.css">
+        <title>Robbie Colborne</title>
+        <a name="top"></a>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <style> 
+        @import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Squada+One&display=swap');
+        </style>
+      </head>
+      <body>
         <div>
-          <section>
-            <h1 id="welcomeheading">Welcome One and All</h1>
-          </section>
-        </div>
-      <div class="bigflex">
-        <div id="codephoto">
-          <section class="hidden1">
-              <h1 class="font">Welcome!</h1>
-              <p class="font2">My name is Robbie, and you are most welcome here on my website. I hope you enjoy exploring the website and finding out more about me.</p>
-          </section>
-        </div>
-        <div>
-          <section>
-              <img id="basketball" src="images/titlepage1.jpg" /> 
-          </section>
-        </div>
-      </div>
-
-        <div class="flexbox">
-            <div class="homepage">
-                <section class="sectionheading, hidden">
-                    <h1 class="font">Welcome!</h1>
-                </section>
-                <section class="hidden"> 
-                    <p class="font2">My name is Robbie, and you are most welcome here on my website. I hope you enjoy exploring the website and finding out more about me. </p>
-                </section>
-                <section class="hide-small">
-                    <h2 class="font">What I'm Doing at the Moment</h2>
-                    <p class="font2">Currently, i'm a full time student at the CoderAcademy Sydney. This means full on study 9 to 5 (also at night and weekends). Hopefully with my own skills, the support of fellow students, and the help of my educators i can become a professional coder!</p>
-                </section>
-            </div>
-            <div class="homepage">
+          <div>
+              <section class="robbiecolborne">
+                  <h1>R<span class="animation1">O</span>BBIE</h1>
+              </section>
+          </div>
+          <div class="flexbox1">
+              <div>
                 <section>
-                    <img id="wedding" src="images/titlepage2.jpg">
+                    <p class="texting"> HOME </p>
+                    <a href="robbiecolborne.html" target="robbiecolborne.html">
+                    <img src="images/4home.jpg"/>
+                    </a>
+              </div>
+              <div>
+                <section>
+                    <p class="texting">ABOUT ME</p>
+                    <a href="aboutme.html" target="aboutme.html">
+                    <img src="images/1aboutme.jpg"/>
+                    </a>
                 </section>
-            </div>
+              </div>
+              <div class="textfix">
+                  <section>
+                      <p class="texting">BLOG</p>
+                      <a href="blog.html" target="blog.html">
+                      <img src="images/2blog.jpg"/>
+                      </a>
+                  </section> 
+              </div>
+              <div>
+                <section>
+                    <p class="texting">CONTACT ME</p>
+                    <a href="contactme.html" target="contactme.html">
+                        <img src="images/3contact.jpg"/>
+                        </a>
+                </section>
+              </div> 
+          </div>
+          <div>
+                <section class="robbiecolborne1" >
+                    <h1>C<span class="animation1">O</span>LB<span class="animation1">O</span>RNE</h1>
+                </section>
+          </div>
+          <div>
+                <section class= "middle">
+                        <h1>DEVELOPER</h1>
+                    </section>
+          </div>
         </div>
-          <section class="hide-large" class="sectionheadinglastp">
-          <h2 class="font"> What I'm Doing at the Moment</h2>
-          <p class="font2">Currently, i'm a full time student at the CoderAcademy Sydney. This means full on study 9 to 5 (also at night and weekends). Hopefully with my own skills, the support of fellow students, and the help of my educators i can become a professional coder!</p>
-        </section>
-        <div>
-          <section>
-            <footer class="footer">
-              <a href="#top">Back to Top</a>
-              <p> Posted by: Robbie Colborne</p>
-              &copy; Copyright Robbie Colborne.
-            </footer>
-          </section>
-        </div>
-    </div>
-    </body>
+      </body>
   </html>
-  
-  
