--- a/code/index.html
+++ b/code/index.html
@@ -25,6 +25,13 @@
                     </a>
               </div>
               <div>
+                  <section>
+                      <p class="texting"> Projects</p>
+                      <a href="coding.html" target="coding.html">
+                      <img src="images/codingaway.jpg"/>
+                      </a>
+                </div>
+              <div>
                 <section>
                     <p class="texting">ABOUT ME</p>
                     <a href="aboutme.html" target="aboutme.html">
