--- a/code/aboutme.html
+++ b/code/aboutme.html
@@ -13,9 +13,10 @@
       <div class="topnav">
           <a class="actve" href="robbiecolborne.html">Home</a>
           <a href="aboutme.html">About</a>
+          <a href="coding.html">Coding</a>
           <a href="blog.html">Blog</a>
           <a href="contactme.html">Contact</a>
-          <a href="robbiecolborne.html">Title</a>
+          <a href="index.html">Title</a>
       </div>
       <div>
         <header>
