--- a/code/blog.html
+++ b/code/blog.html
@@ -13,6 +13,7 @@
        <div class="topnav">
           <a class="actve" href="robbiecolborne.html">Home</a>
           <a href="aboutme.html">About</a>
+          <a href="coding.html">Coding</a>
           <a href="blog.html">Blog</a>
           <a href="contactme.html">Contact</a>
           <a href="index.html">Title</a>
