--- a/code/contactme.html
+++ b/code/contactme.html
@@ -12,11 +12,12 @@
     </head>
     <body>
       <div class="topnav">
-        <a class="actve" href="robbiecolborne.html">Home</a>
-        <a href="aboutme.html">About</a>
-        <a href="blog.html">Blog</a>
-        <a href="contactme.html">Contact</a>
-        <a href="index.html">Title</a>
+          <a class="actve" href="robbiecolborne.html">Home</a>
+          <a href="aboutme.html">About</a>
+          <a href="coding.html">Coding</a>
+          <a href="blog.html">Blog</a>
+          <a href="contactme.html">Contact</a>
+          <a href="index.html">Title</a>
       </div>
       <div>
         <section>
