--- a/code/index.html
+++ b/code/index.html
@@ -26,7 +26,7 @@
               </div>
               <div>
                   <section>
-                      <p class="texting"> Projects</p>
+                      <p class="texting"> CODING</p>
                       <a href="coding.html" target="coding.html">
                       <img src="images/codingaway.jpg"/>
                       </a>
