--- a/code/coding.html
+++ b/code/coding.html
@@ -43,11 +43,18 @@
                 <h2 class="toptext" class="heading">Current Knowledge</h1>
             </section>
           </div>
-          <div>
-            <section class="border">
-                <p class="left">RUBY</p>
-                <p class="center">HTML5</p>
-                <p class="right">CSS3</p>
+          <div class="border">
+            <section class="left">
+                <p>RUBY</p>
+                <img src="images/ruby.png">
+            </section>
+            <section class="center">
+                <p>HTML5</p>
+                <img src="images/html.png">
+            </section>
+            <section class="right">
+                <p>CSS3</p>
+                <img src="images/css.png">
             </section>
           </div>
           <div>
@@ -61,6 +68,14 @@
                 <p class="center">Java Script</p>
                 <p class="right">Node/React</p>  
               </section>
+          </div>
+          <div>
+            <section>
+              <h3 class="toptext" class="heading">Résumé</h3>
+            </section>
+            <section class="center" >
+                <a href= "resume/functionalSample.pdf"> <img src="images/resume.png"></a>
+            </section>
           </div>
         </div>
         <div>
