--- a/code/blog.html
+++ b/code/blog.html
@@ -31,7 +31,7 @@
           </div>
           <div class="step1">
           <section>
-              <h2 class="font">Learning Code, Requires Support!</h1>
+              <h2 class="font">23rd of August 2019, Learning Code, Requires Support!</h1>
               <p class="font1">Since the start of my time at CoderAcademy, I have relied heavily on the assistance of both Hamish and Garett. They are the educators of our class and never fail to give a helping hand. Here is a candid photo of Hamish and I discussing a coding problem. Luckily, we were able to find the solution and I could get back to coding! </p>
           </section>
           </div>
@@ -44,7 +44,7 @@
         </div>
           <div class="step1">
             <section>
-              <h2 class="font" >It Takes A Community</h2>
+              <h2 class="font" >30th of August 2019, It Takes A Community</h2>
               <p class="font1">Starting a coding bootcamp is not something to take up lightly. It requires looks days and extra study on the weekend. Luckily, Harry is really good at Ruby so he can help me when I struggle. Hopefully, I can repay the favour later in the course! </p>
             </section>
           </div>
@@ -57,7 +57,7 @@
         </div>
         <div class="step1">
         <section>
-          <h2 class="font">CoderAcademy VS Universities. </h2>
+          <h2 class="font">4th of September 2019, CoderAcademy VS Universities. </h2>
           <p class="font1">One of the best things about the boot camp, is the ability to help other students, this allows you to cement your own subject knowledge and make it feel like we are one big community. This is so different from the overly competitive, individualistic style of education offered at universities in Australia. I have really enjoyed this change of culture and hopefully, my next job will be comprised of an equally supportive team.   </p>
         </section>
         </div>
@@ -70,7 +70,7 @@
         </div>
         <div class="step1">
           <section>
-            <h2 class="font">Hungry Minds</h2>
+            <h2 class="font"> 8th of September 2019, Hungry Minds</h2>
             <p class="font1">We have lunch everyday from 12 to 1. It’s a great time to get to meet the fellow students and learn more about them. If there is one thing that annoys me it’s how long it takes to get use of a microwave! Here is another sneaky photo of me I had no idea was about to be taken! </p>
           </section>
         </div>
@@ -83,7 +83,7 @@
         </div>
         <div class="step1">
           <section>
-            <h2 class="font">My First Time</h2>
+            <h2 class="font">12th of September 2019, My First Time</h2>
             <p class="font1">Garret and Hamish were so impressed with my understanding that they asked me to give my first lecture to the group! I think everyone found it really informative. This class truely is lucky to have me! </p>
           </section>
         </div>
