comments added to code

--- a/code/aboutme.html
+++ b/code/aboutme.html
@@ -10,6 +10,9 @@
       </style>
     </head>
     <body>
+      <!-- The topnav bar is a feature throughout my website
+      It is locked in place while the user scrolls the page
+      This gives the user the ability to navigate the pages in an easy fashion -->
       <div class="topnav">
           <a class="actve" href="robbiecolborne.html">Home</a>
           <a href="aboutme.html">About</a>
@@ -19,6 +22,8 @@
           <a href="index.html">Title</a>
       </div>
       <div>
+        <!-- My pages feature a different title on each page using the same format. 
+        This gives the pages a continuity with each other  -->
         <header>
           <h1 id="aboutme">What I'm About</h1>
         </header>
@@ -44,6 +49,8 @@
         <p class="font2"> Since my youth, I have enjoyed sports. I never really minded which ones. I spent a lot of time playing both cricket and basketball. As I grow older, I developed an interest in coin collecting, which is relatively unique for someone my age. I guess it was a reflection of a great deal of free time! I love to spend time with my family and friends and consider these relationships my most valued possession. </p>
       </div>
       <div>
+        <!-- all of my pages feature a footer section which enables the user to quickly go back to the beginning of the page 
+        this improves the users experience of the website -->
           <section class="footer">
               <footer>
                   <a id="footer" href="#top">Back to Top</a>
