--- a/code/blog.html
+++ b/code/blog.html
@@ -23,6 +23,8 @@
            <h1 id="blog">Blog Space</h1>
          </section>
        </div> 
+       <!-- The amount of content on this pages allowed for the use of media breakpoints which greatly influence the look of the page
+       This enables desktop users to have a more visual appealing experience when viewing the website -->
        <div class="flexdiv1">
          <div class="flexdiv2">
           <section>
