--- a/code/coding.html
+++ b/code/coding.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <!-- This whole page is targeted specifically to a potential employer -->
     <head>
         <link rel="stylesheet" href="css/coding.css">
       <title>Coding</title>
@@ -19,6 +20,10 @@
             <a href="index.html">Title</a>
         </div>
         <div>
+          <!-- There are a number of features within this parent division
+          images are linked to my various projects which shows a prospective employer my development as a programmer
+          icons are used to show what programming languages i have become familiar within
+          An icon is used to link to my PDF resume which helps a prospective employeer learn more about me  -->
           <div>
             <div>
               <section>
