--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
   <html>
+    <!-- Head Section- link to CSS, add title, styles all data besides what renders on page -->
       <head>
         <link rel="stylesheet" href="css/index.css">
         <title>Robbie Colborne</title>
@@ -10,12 +11,21 @@
         </style>
       </head>
       <body>
+        <!-- All elements that render to page
+        I have made use of many divisions and sections throughout my code
+        I feel like this has given me a great deal of freedom in regards to implementing my css
+        it has also helped me structure my pages  -->
         <div>
           <div>
+        <!-- This span links to one of my features which is an animation on the letter o of my name
+        this aims to make my name stick out and become memorable to a prospective employer -->
               <section class="robbiecolborne">
                   <h1>R<span class="animation1">O</span>BBIE</h1>
               </section>
           </div>
+          <!-- This flexbox allows for minimum changes to the code when i reach my media-break point -->
+          <!-- Within this parent division is all the different links to my webpages
+          this renders with a clickable image -->
           <div class="flexbox1">
               <div>
                 <section>
@@ -57,6 +67,8 @@
               </div> 
           </div>
           <div>
+            <!-- This is another feature. It is the same animation as earlier. 
+            It once again aims to make my name stick out -->
                 <section class="robbiecolborne1" >
                     <h1>C<span class="animation1">O</span>LB<span class="animation1">O</span>RNE</h1>
                 </section>
