--- a/code/contactme.html
+++ b/code/contactme.html
@@ -19,6 +19,8 @@
           <a href="contactme.html">Contact</a>
           <a href="index.html">Title</a>
       </div>
+      <!-- Images are used to link to my various professional and personal social media accounts
+      If you hover over the image of the phone, my number will become visable which is a cool feature  -->
       <div>
         <section>
           <h1 id="getintouch">Get in Touch</h1>
